[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ballast.gd" type="Script" id=1]
[ext_resource path="res://Terminal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Balance.tscn" type="PackedScene" id=3]

[node name="Ballasts" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftBallast" parent="." instance=ExtResource( 2 )]
position = Vector2( -416, 0 )

[node name="LeftBalance" parent="LeftBallast" instance=ExtResource( 3 )]

[node name="RightBallast" parent="." instance=ExtResource( 2 )]
position = Vector2( 416, 0 )

[node name="RightBalance" parent="RightBallast" instance=ExtResource( 3 )]
